--- a/css/main.css
+++ b/css/main.css
@@ -40,7 +40,7 @@ a.white-mode:hover, a.white-mode:link:hover, a.white-mode:visited:hover, a.white
   padding: 0;
   margin: 0;
   line-height: 1;
-  text-shadow: 0 0 10px #ff006c, 0 0 20px #ff006c, 0 0 30px #ff006c, 0 0 40px #ff417d, 0 0 70px #ff417d, 0 0 80px #ff417d, 0 0 100px #ff417d, 0 0 150px #ff417d;
+  text-shadow: 0 0 10px #ffccdd, 0 0 20px #ffccdd, 0 0 30px #ffccdd, 0 0 40px #ffccdd, 0 0 70px #ffccdd, 0 0 80px #ffccdd, 0 0 100px #ffccdd, 0 0 150px #ffccdd;
 }
 
 .title h1 span {
